Correción de función deskew tesseract

--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -182,7 +182,7 @@
     "        print('-------------------------------------------------------------------')\n",
     "    \n",
     "dataset = generate_dataset(\"Datos/JusticIA_DatosTranscripciones.csv\")\n",
-    "test_set = generate_random_test(dataset, 1000, 'Fichas_manual')\n",
+    "test_set = generate_random_test(dataset, 100, 'Fichas_manual')\n",
     "datos_head(test_set, 5)"
    ]
   },
@@ -509,6 +509,22 @@
     "plt.figure(figsize=(20,10))\n",
     "plt.imshow(img_rotada_nb, cmap='gray')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd2ee880-52f9-4528-aa26-9a0c5ff52206",
+   "metadata": {},
+   "source": [
+    "### Evaluación de la eficacia del pre-procesamiento sobre el conjunto de pruebas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086e0a09-f7ef-4056-850e-feed5978b29b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
