Se remueve coeus.py

--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -516,7 +516,7 @@
    "source": [
     "#### Extracción de OCR co\n",
     "for Document in test_set:\n",
-    "    "
+    "    pass"
    ]
   }
  ],
