Se añade evaluación del conjunto de prueba.

--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -207,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6d86a76850>"
+       "<matplotlib.image.AxesImage at 0x7fc9c8117ac0>"
       ]
      },
      "execution_count": 4,
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6d869f31c0>"
+       "<matplotlib.image.AxesImage at 0x7fc9c80941f0>"
       ]
      },
      "execution_count": 5,
@@ -283,7 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6d869612e0>"
+       "<matplotlib.image.AxesImage at 0x7fc9c7ff8f70>"
       ]
      },
      "execution_count": 6,
@@ -319,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6d8693f580>"
+       "<matplotlib.image.AxesImage at 0x7fc9c7fe35e0>"
       ]
      },
      "execution_count": 7,
@@ -355,7 +355,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6d8689ec40>"
+       "<matplotlib.image.AxesImage at 0x7fc9c7f41d00>"
       ]
      },
      "execution_count": 8,
@@ -393,7 +393,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6d868091c0>"
+       "<matplotlib.image.AxesImage at 0x7fc9c7eab220>"
       ]
      },
      "execution_count": 9,
@@ -458,7 +458,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6d867ef940>"
+       "<matplotlib.image.AxesImage at 0x7fc9c7e8faf0>"
       ]
      },
      "execution_count": 11,
@@ -495,7 +495,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6d867492b0>"
+       "<matplotlib.image.AxesImage at 0x7fc9c7dec3d0>"
       ]
      },
      "execution_count": 12,
@@ -532,7 +532,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6d8673b0d0>"
+       "<matplotlib.image.AxesImage at 0x7fc9c7dde220>"
       ]
      },
      "execution_count": 13,
@@ -626,88 +626,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f6f01d0a-900a-482c-9c3c-e2caaf368007",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El archivo de transcripciones ya existe: Datos/Test/predictions.json\n",
-      "OCR para documento 1 finalizado: Ficheros_Detenidos_Desaparecidos_Cabanas_Fierro_Zacarias_76-12-07,_CABANAS_FIERRO_ZACARIAS-3-.JPG\n",
-      "OCR para documento 2 finalizado: Ficheros_Salas_Obregon_Ignacio_Arturo_Ignacio_Arturo_Salas_Obregon,_fichas-123-.JPG\n",
-      "OCR para documento 3 finalizado: Ficheros_VARP_DFS,_Fichas_VARP_2_DFS_Fichas_VARP_2-32-.JPG\n",
-      "OCR para documento 4 finalizado: Ficheros_UAG_79-07-12_a_80-03-04_UAG,_fichas-131-.JPG\n",
-      "OCR para documento 5 finalizado: Ficheros_UAG_78-04-15_a_78-11-10_UAG,_fichas-118-.JPG\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yibbtstll/venvs/CoeusAI/lib/python3.8/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
-      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formato incorrecto.\n",
-      "OCR para documento 6 finalizado: Ficheros_Asociacion_Civica_Guerrerense_66-12-30_a_71-12-11_ACG_fichas-46-.JPG\n",
-      "OCR para documento 7 finalizado: Ficheros_Frente_Armado_del_Pueblo_Fichas_Frente_Armado_del_Pueblo,_fichas-24-.JPG\n",
-      "OCR para documento 8 finalizado: Ficheros_Detenidos_Desaparecidos_Arenas_Bautista_Marcelo_74-08-09,_ARENAS_BAUTISTA,_Marcelo-11-.JPG\n",
-      "OCR para documento 9 finalizado: Ficheros_Represores_Lopez_Betancourt_Raul_Eduardo_Lopez_Bentancourt_Raul_Eduardo-42-.JPG\n",
-      "OCR para documento 10 finalizado: Ficheros_UAG_77-12-29_a_78-04-24_UAG,_fichas-76-.JPG\n",
-      "OCR para documento 11 finalizado: Ficheros_Represores_Figueroa_Figueroa_Ruben_Figueroa_Figueroa_Ruben_2_De_79-07-20_a_83-06-04,_FIGUEROA_FIGUEROA,_Ruben-21-.JPG\n",
-      "OCR para documento 12 finalizado: Ficheros_Represores_Garcia_Paniagua_Javier_Garcia_Paniagua_Javierr-37-.JPG\n",
-      "OCR para documento 13 finalizado: Ficheros_UAG_73-12-08_a_75-03-19_UAG,_fichas-150-.JPG\n",
-      "OCR para documento 14 finalizado: Ficheros_Represores_Alanis_Fuentes_Agustin_79-07-16_a_85-11-20_De_79-07-16_a_85-11-20,_ALANIS_FUENTES,_Agustin-25-.JPG\n",
-      "OCR para documento 15 finalizado: Ficheros_UAG_78-11-14_a_79-11-29_UAG,_fichas-41-.JPG\n",
-      "OCR para documento 16 finalizado: Ficheros_Detenidos_Desaparecidos_Mendoza_Gaytan_David_Jesus_De_67-12-16_a_76-08-05,_MENDOZA_GAYTAN_,_David_Jesus-32-.JPG\n",
-      "Formato incorrecto.\n",
-      "OCR para documento 17 finalizado: Ficheros_Carmelo_Cortes_Castro_Fichas_1_Carmelo_cortes-115-.JPG\n",
-      "OCR para documento 18 finalizado: Ficheros_Represores_Hernandez_Diaz_Antonio_Hernandez_Diaz_Antonio-4-.JPG\n",
-      "OCR para documento 19 finalizado: Ficheros_ACNR_militantes_Ramirez_Rodriguez_Juan_IMG_7302.JPG\n",
-      "OCR para documento 20 finalizado: Ficheros_VARP_VARP_1_VARP,_fichas-55-.JPG\n",
-      "OCR para documento 21 finalizado: Ficheros_UPCEG,_Version_Publica-59-04-09_a_85-12-04-,_Guerrero_UPCEG,_2_de_4-67-04-21_a_69-09-18-_2_de_4-67-04-21_a_69-09-18-33-.JPG\n",
-      "OCR para documento 22 finalizado: Ficheros_Represores_Castro_Contreras_Wilfrido_Castro_contreras_Wilfrido-16-.JPG\n",
-      "OCR para documento 23 finalizado: Ficheros_Represores_Figueroa_Figueroa_Ruben_Figueroa_Figueroa_Ruben_1_Figueroa_Figueroa_Ruben-302-.JPG\n",
-      "OCR para documento 24 finalizado: Ficheros_UAG_65-04-12_a_66-11-30_UAG_fichas-9-.JPG\n",
-      "OCR para documento 25 finalizado: Ficheros_UAG_77-12-29_a_78-04-24_UAG,_fichas-8-.JPG\n",
-      "OCR para documento 26 finalizado: Ficheros_UAG_78-04-15_a_78-11-10_UAG,_fichas-135-.JPG\n",
-      "OCR para documento 27 finalizado: Ficheros_ACNR_militantes_Baltazar_Arreola_Victor_IMG_6844.JPG\n",
-      "OCR para documento 28 finalizado: Ficheros_UAG_76-04-05_a_76-11-15_UAG,_fichas-13-.JPG\n",
-      "OCR para documento 29 finalizado: Ficheros_Represores_Figueroa_Figueroa_Ruben_Figueroa_Figueroa_Ruben_1_Figueroa_Figueroa_Ruben-78-.JPG\n",
-      "OCR para documento 30 finalizado: Ficheros_Fuerzas_Armadas_de_Liberacion_Garcia_Fuentes_Nicomedes_Garcia_Fuentes_Nicomedes-2-.JPG\n",
-      "OCR para documento 31 finalizado: Ficheros_UAG_76-11-16_a_77-03-19_UAG,_fichas-39-.JPG\n",
-      "OCR para documento 32 finalizado: Ficheros_Detenidos_Desaparecidos_Olea_Hernandez_Adanto_Olea_Hernandez_Adanto-3-.JPG\n",
-      "OCR para documento 33 finalizado: Ficheros_Salas_Obregon_Ignacio_Arturo_Ignacio_Arturo_Salas_Obregon,_fichas-91-.JPG\n",
-      "OCR para documento 34 finalizado: Ficheros_Zamora_Galindo_Camerino_Zamora_Galindo_Camerino,_fichas-24-.JPG\n",
-      "Formato incorrecto.\n",
-      "OCR para documento 35 finalizado: Ficheros_Carmelo_Cortes_Castro_Fichas_1_Carmelo_cortes-82-.JPG\n",
-      "OCR para documento 36 finalizado: Ficheros_VARP_VARP_3_IMG_5641.JPG\n",
-      "Formato incorrecto.\n",
-      "OCR para documento 37 finalizado: Ficheros_PDLP_72-06-25_a_73-10-07_101MSDCF_PDLP,_fichas-10-.JPG\n",
-      "OCR para documento 38 finalizado: Ficheros_ACNR_militantes_Rodriguez_Rosas_Maria_de_Lourdes_IMG_7730.JPG\n",
-      "OCR para documento 39 finalizado: Ficheros_ACNR_militantes_Olea_Castaneyra_Rafel_Olea_Castaneyra_Rafael,_ACNR-3-.JPG\n",
-      "OCR para documento 40 finalizado: Ficheros_ACNR_militantes_Ramirez_Rodriguez_Juan_IMG_7264.JPG\n",
-      "OCR para documento 41 finalizado: Ficheros_UAG_73-12-08_a_75-03-19_UAG,_fichas-125-.JPG\n",
-      "Formato incorrecto.\n",
-      "OCR para documento 42 finalizado: Ficheros_Represores_Policia_del_estado_de_Guerrero_Policia_de_Guerrero_2_Policia_del_Estado_de_Guerrero-50-.JPG\n",
-      "OCR para documento 43 finalizado: Ficheros_ACNR_militantes_Lopez_Ayala_Raul_IMG_0112.JPG\n",
-      "OCR para documento 44 finalizado: Ficheros_VARP_VARP_6_IMG_5785.JPG\n",
-      "OCR para documento 45 finalizado: Ficheros_VARP_VARP,_relaciones_IMG_5856.JPG\n",
-      "OCR para documento 46 finalizado: Ficheros_Represores_Alanis_Fuentes_Agustin_79-07-16_a_85-11-20_De_79-07-16_a_85-11-20,_ALANIS_FUENTES,_Agustin-42-.JPG\n",
-      "OCR para documento 47 finalizado: Ficheros_UAG_75-07-03_a_76-04-05_UAG,_fichas-15-.JPG\n",
-      "OCR para documento 48 finalizado: Ficheros_Detenidos_Desaparecidos_Messino_Galicia_Julio_Messino_Galicia_Julio-1-.JPG\n",
-      "OCR para documento 49 finalizado: Ficheros_Zona_Militar_27,_fichas_Zona_Militar_27,_fichas-64-.JPG\n",
-      "OCR para documento 50 finalizado: Ficheros_Represores_Figueroa_Figueroa_Ruben_Figueroa_Figueroa_Ruben_1_Figueroa_Figueroa_Ruben-253-.JPG\n",
-      "Finalizado con: 5 errores de Azure.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "def predict_test_set(path_to_predictions):\n",
@@ -801,17 +723,138 @@
     "        f.close()\n",
     "    print(\"Finalizado con:\", azure_errors, \"errores de Azure.\")\n",
     "\n",
-    "predict_test_set(\"Datos/Test/predictions.json\")"
+    "predict_test = False\n",
+    "\n",
+    "if predict_test:\n",
+    "    predict_test_set(\"Datos/Test/predictions.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d7ec4cd-7466-494c-b4ec-106a6dc2b02e",
+   "metadata": {},
+   "source": [
+    "#### Evaluación de los resultados para el conjunto de prueba"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3a016725-4b62-495b-bb1d-4e5af3794393",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El archivo de transcripciones ya existe: Datos/Test/predictions.json\n",
+      "Scores para Azure sin pre-procesamiento\n",
+      "Jaccard: 0.7405373006634044\n",
+      "Dice: 0.7684341200613215\n",
+      "Hamming: 0.6302\n",
+      "Cosine: 0.768763413955381\n",
+      "Scores para Azure binarización adaptativa\n",
+      "Jaccard: 0.8204447613215016\n",
+      "Dice: 0.8573194921874638\n",
+      "Hamming: 0.6478\n",
+      "Cosine: 0.8579283244817585\n",
+      "Scores para Azure con binarización Otsu\n",
+      "Jaccard: 0.8130831057801654\n",
+      "Dice: 0.8533020636936177\n",
+      "Hamming: 0.5338\n",
+      "Cosine: 0.8537709041324392\n",
+      "Scores para EasyOCR sin pre-procesamiento\n",
+      "Jaccard: 0.6912023747061984\n",
+      "Dice: 0.7754270122834822\n",
+      "Hamming: 0.4434\n",
+      "Cosine: 0.7774496940468603\n",
+      "Scores para EasyOCR binarización adaptativa\n",
+      "Jaccard: 0.8204447613215016\n",
+      "Dice: 0.8573194921874638\n",
+      "Hamming: 0.6478\n",
+      "Cosine: 0.8579283244817585\n",
+      "Scores para EasyOCR con binarización Otsu\n",
+      "Jaccard: 0.6354509549107324\n",
+      "Dice: 0.7351009189589458\n",
+      "Hamming: 0.4008\n",
+      "Cosine: 0.7391859951283104\n"
+     ]
+    }
+   ],
    "source": [
-    "# "
+    "def evaluate_test_set(path_to_predictions):\n",
+    "    # Abriendo el archivo JSON con las predicciones\n",
+    "    if os.path.isfile(path_to_predictions):\n",
+    "        print(\"El archivo de transcripciones ya existe:\", path_to_predictions)\n",
+    "        f = open(path_to_predictions)\n",
+    "        predictions_dict = json.load(f)\n",
+    "        f.close()\n",
+    "    \n",
+    "    # Definiendo listas para puntajes\n",
+    "    azure_np = []\n",
+    "    azure_adaptive = []\n",
+    "    azure_otsu = []\n",
+    "    easy_np = []\n",
+    "    easy_adaptive = []\n",
+    "    easy_otsu = []\n",
+    "        \n",
+    "    for Document in predictions_dict.items():\n",
+    "        texto_manual = Document[1]['texto_manual']\n",
+    "        \n",
+    "        # Métricas de Azure\n",
+    "        azure_np.append(metricasSRF(texto_manual, Document[1]['texto_azure_np']))\n",
+    "        azure_adaptive.append(metricasSRF(texto_manual, Document[1]['texto_azure_pp_adaptive']))\n",
+    "        azure_otsu.append(metricasSRF(texto_manual, Document[1]['texto_azure_pp_otsu']))\n",
+    "        \n",
+    "        # Métricas de EasyOCR\n",
+    "        easy_np.append(metricasSRF(texto_manual, Document[1]['texto_easyocr_np']))\n",
+    "        easy_adaptive.append(metricasSRF(texto_manual, Document[1]['texto_azure_pp_adaptive']))\n",
+    "        easy_otsu.append(metricasSRF(texto_manual, Document[1]['texto_easyocr_pp_otsu']))\n",
+    "    \n",
+    "    return azure_np, azure_adaptive, azure_otsu, easy_np, easy_adaptive, easy_otsu\n",
+    "\n",
+    "def print_metrics(metrics_dict):\n",
+    "    jaccard = []\n",
+    "    sorensen = []\n",
+    "    hamming = []\n",
+    "    cosine = []\n",
+    "    \n",
+    "    for doc in metrics_dict:\n",
+    "        jaccard.append(doc['Jaccard'])\n",
+    "        sorensen.append(doc['Dice'])\n",
+    "        hamming.append(doc['Hamming'])\n",
+    "        cosine.append(doc['Cosine'])\n",
+    "    \n",
+    "    print(\"Jaccard:\", sum(jaccard)/len(jaccard))\n",
+    "    print(\"Dice:\", sum(sorensen)/len(sorensen))\n",
+    "    print(\"Hamming:\", (sum(hamming)/len(hamming))/100)\n",
+    "    print(\"Cosine:\", sum(cosine)/len(cosine))\n",
+    "    \n",
+    "azure_np, azure_adaptive, azure_otsu, easy_np, easy_adaptive, easy_otsu = evaluate_test_set(\"Datos/Test/predictions.json\")\n",
+    "\n",
+    "# Imprimiento los scores para Azure sin pre-procesamiento\n",
+    "print(\"Scores para Azure sin pre-procesamiento\")\n",
+    "print_metrics(azure_np)\n",
+    "\n",
+    "# Imprimiento los scores para Azure con binarización adaptativa\n",
+    "print(\"Scores para Azure binarización adaptativa\")\n",
+    "print_metrics(azure_adaptive)\n",
+    "\n",
+    "# Imprimiento los scores para Azure con binarización Otsu\n",
+    "print(\"Scores para Azure con binarización Otsu\")\n",
+    "print_metrics(azure_otsu)\n",
+    "\n",
+    "# Imprimiento los scores para EasyOCR sin pre-procesamiento\n",
+    "print(\"Scores para EasyOCR sin pre-procesamiento\")\n",
+    "print_metrics(easy_np)\n",
+    "\n",
+    "# Imprimiento los scores para EasyOCR con binarización adaptativa\n",
+    "print(\"Scores para EasyOCR binarización adaptativa\")\n",
+    "print_metrics(easy_adaptive)\n",
+    "\n",
+    "# Imprimiento los scores para EasyOCR con binarización Otsu\n",
+    "print(\"Scores para EasyOCR con binarización Otsu\")\n",
+    "print_metrics(easy_otsu)"
    ]
   }
  ],
