--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "3a016725-4b62-495b-bb1d-4e5af3794393",
    "metadata": {},
    "outputs": [
@@ -749,35 +749,41 @@
      "text": [
       "El archivo de transcripciones ya existe: Datos/Test/predictions.json\n",
       "Scores para Azure sin pre-procesamiento\n",
-      "Jaccard: 0.7405373006634044\n",
       "Dice: 0.7684341200613215\n",
-      "Hamming: 0.6302\n",
+      "Jaccard: 0.7405373006634044\n",
       "Cosine: 0.768763413955381\n",
+      "Hamming: 0.6302\n",
+      "-------------------------------------------\n",
       "Scores para Azure binarización adaptativa\n",
-      "Jaccard: 0.8204447613215016\n",
       "Dice: 0.8573194921874638\n",
-      "Hamming: 0.6478\n",
+      "Jaccard: 0.8204447613215016\n",
       "Cosine: 0.8579283244817585\n",
+      "Hamming: 0.6478\n",
+      "-------------------------------------------\n",
       "Scores para Azure con binarización Otsu\n",
-      "Jaccard: 0.8130831057801654\n",
       "Dice: 0.8533020636936177\n",
-      "Hamming: 0.5338\n",
+      "Jaccard: 0.8130831057801654\n",
       "Cosine: 0.8537709041324392\n",
+      "Hamming: 0.5338\n",
+      "-------------------------------------------\n",
       "Scores para EasyOCR sin pre-procesamiento\n",
-      "Jaccard: 0.6912023747061984\n",
       "Dice: 0.7754270122834822\n",
-      "Hamming: 0.4434\n",
+      "Jaccard: 0.6912023747061984\n",
       "Cosine: 0.7774496940468603\n",
+      "Hamming: 0.4434\n",
+      "-------------------------------------------\n",
       "Scores para EasyOCR binarización adaptativa\n",
-      "Jaccard: 0.8204447613215016\n",
-      "Dice: 0.8573194921874638\n",
-      "Hamming: 0.6478\n",
-      "Cosine: 0.8579283244817585\n",
+      "Dice: 0.7295079847465868\n",
+      "Jaccard: 0.6298075607740863\n",
+      "Cosine: 0.7341156220808154\n",
+      "Hamming: 0.42579999999999996\n",
+      "-------------------------------------------\n",
       "Scores para EasyOCR con binarización Otsu\n",
-      "Jaccard: 0.6354509549107324\n",
       "Dice: 0.7351009189589458\n",
+      "Jaccard: 0.6354509549107324\n",
+      "Cosine: 0.7391859951283104\n",
       "Hamming: 0.4008\n",
-      "Cosine: 0.7391859951283104\n"
+      "-------------------------------------------\n"
      ]
     }
    ],
@@ -808,7 +814,7 @@
     "        \n",
     "        # Métricas de EasyOCR\n",
     "        easy_np.append(metricasSRF(texto_manual, Document[1]['texto_easyocr_np']))\n",
-    "        easy_adaptive.append(metricasSRF(texto_manual, Document[1]['texto_azure_pp_adaptive']))\n",
+    "        easy_adaptive.append(metricasSRF(texto_manual, Document[1]['texto_easyocr_pp_adaptive']))\n",
     "        easy_otsu.append(metricasSRF(texto_manual, Document[1]['texto_easyocr_pp_otsu']))\n",
     "    \n",
     "    return azure_np, azure_adaptive, azure_otsu, easy_np, easy_adaptive, easy_otsu\n",
@@ -825,16 +831,18 @@
     "        hamming.append(doc['Hamming'])\n",
     "        cosine.append(doc['Cosine'])\n",
     "    \n",
-    "    print(\"Jaccard:\", sum(jaccard)/len(jaccard))\n",
     "    print(\"Dice:\", sum(sorensen)/len(sorensen))\n",
-    "    print(\"Hamming:\", (sum(hamming)/len(hamming))/100)\n",
+    "    print(\"Jaccard:\", sum(jaccard)/len(jaccard))\n",
     "    print(\"Cosine:\", sum(cosine)/len(cosine))\n",
+    "    print(\"Hamming:\", (sum(hamming)/len(hamming))/100)\n",
+    "    print(\"-------------------------------------------\")\n",
     "    \n",
     "azure_np, azure_adaptive, azure_otsu, easy_np, easy_adaptive, easy_otsu = evaluate_test_set(\"Datos/Test/predictions.json\")\n",
     "\n",
     "# Imprimiento los scores para Azure sin pre-procesamiento\n",
     "print(\"Scores para Azure sin pre-procesamiento\")\n",
     "print_metrics(azure_np)\n",
+    "\n",
     "\n",
     "# Imprimiento los scores para Azure con binarización adaptativa\n",
     "print(\"Scores para Azure binarización adaptativa\")\n",
