Extracción de entidades 1

--- a/CoeusAI-Principal.ipynb
+++ b/CoeusAI-Principal.ipynb
@@ -43,7 +43,9 @@
   {
    "cell_type": "markdown",
    "id": "a6e50e2f-8711-436b-890b-68640b711f82",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Extracción de entidades\n",
     "1. Extracción de entidades con Spacy: es_core_news_lg\n",
@@ -54,16 +56,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "386cbfe2-c7cb-4c10-954f-3466a484e4e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (coeus.py, line 313)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/yibbtstll/venvs/CoeusAI/lib/python3.8/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3441\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_187623/443090104.py\"\u001b[0;36m, line \u001b[0;32m5\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from coeus import add_entities_json\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/yibbtstll/venvs/CoeusAI/Coeus-AI/coeus.py\"\u001b[0;36m, line \u001b[0;32m313\u001b[0m\n\u001b[0;31m    return texto 2\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "La función coeus.add_entities_json() realiza los 4 pasos descritos en la \n",
+    "celda anterior.\n",
+    "\"\"\"\n",
+    "from coeus import add_entities_json\n",
+    "\n",
+    "credentials = {'key': \"dadc0fff23804ae0890878f9b74ea18d\",\n",
+    "               'endpoint': \"https://hacktextocrcoueus.cognitiveservices.azure.com/\"}\n",
+    "\n",
+    "path_to_predictions = \"Datos/Test/predictions.json\" # Ruta al json de predicciones\n",
+    "path_to_save = \"Datos/Test/predictions_w_entities.json\" # Ruta al json de predicciones\n",
+    "add_entities_json(path_to_predictions, path_to_save, credentials) # Añadiendo las entidades"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e2caa6ea-03d0-408e-8891-d052ea54fe44",
+   "id": "e62824e4-75ab-4da3-a5ec-d25ce51600a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, Document in enumerate(test_set.items()):\n",
-    "            texto_azure = Document[1]['texto_azure_pp_adaptive']\n",
-    "            texto_easy = Document[1]['texto_easyocr_np']\n",
-    "            mejor = compare_transcriptions_unsupervised(texto_azure, texto_easy)\n",
-    "            predictions_dict[str(Document[0])] = {'entidades': [entidades]}"
+    "# Extracción de Expedientes\n",
+    "test = \"\"\"ASOCIACION CIVICA GUERRERENSE\n",
+    "Exp-100-10-1-67.\n",
+    "EN. EL EDO.DE GUERRERO.\n",
+    "H-11- - .22 24 ...L-29\\n10-Nov-6 - \n",
+    "Atoyac de Alvarez, en este lugar' \n",
+    "contint\\nlatente el problema ocasionado \n",
+    "por el Grupo del -\\nProf.LUCIO CABANAS, q\n",
+    "ue sigue efectuando labor\\n--\\nde agi aci\\u00f3n \n",
+    "entre pobladores y comercianes a qui\\nenes incitan a \n",
+    "llevar a cabo actos en contra de\\nlos Gbnos. Mpls.y Est. , \n",
+    "a einclusive a los segundos\\nel mencionado grupo ha estado \n",
+    "amenazando de cuer- \\u00b7 te. Exp-100-10-1-67. H-127\\nL-29\\n1.fc-57 .- \n",
+    "Atoyac de Alvarez, elementos de esta esc\\nciacionse han dedicado a lanzar \n",
+    "panfletos y ha --\\ncer pintas principalmente en la region de la sie\\nrra, de dicho \n",
+    "Mpio ., con leyndas contrarias al \\\"jec!\", \"\n",
+    "\n",
+    "\"\"\"\n",
+    "exp = re.compile('[bBjJeExXpPzZ ][eE xX pP zZ][eE xX pP zZ][-. :].{1,12}')\n",
+    "exp.findall(text)"
    ]
   }
  ],
