--- a/CoeusAI-Principal.ipynb
+++ b/CoeusAI-Principal.ipynb
@@ -56,19 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "386cbfe2-c7cb-4c10-954f-3466a484e4e3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (coeus.py, line 313)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/home/yibbtstll/venvs/CoeusAI/lib/python3.8/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3441\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_187623/443090104.py\"\u001b[0;36m, line \u001b[0;32m5\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from coeus import add_entities_json\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/home/yibbtstll/venvs/CoeusAI/Coeus-AI/coeus.py\"\u001b[0;36m, line \u001b[0;32m313\u001b[0m\n\u001b[0;31m    return texto 2\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entidades del documento 0 : Ficheros_Detenidos_Desaparecidos_Cabanas_Fierro_Zacarias_76-12-07,_CABANAS_FIERRO_ZACARIAS-3-.JPG han sido procesadas.\n"
      ]
     }
    ],
